--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-bot.name=Test_Valentyn_bot
-bot.token=6946765594:AAE3BndFFU9T6tK48JaInsNXpKb53GCQCtc
-bot.owner = 419437365
+bot.name=
+bot.token=
+bot.owner = 
 
 spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url=jdbc:mysql://localhost:3306/tgUser-save
-spring.datasource.username=root
-spring.datasource.password=123123
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
